# Informatics-Project

./: .gitignore  CMakeLists.txt  README.md
src/: AssetManager.cpp  AssetManager.hpp  Bird.cpp  Bird.hpp  Game.cpp  Game.hpp  PipeManager.cpp  PipeManager.hpp  main.cpp
